# DDPValidator

./: .gitattributes  .gitignore  README.md  TP04Test.py  build.bat  pyproject.toml  run.py  setup.py
data/: classifier.json  lab01.toml  lab02.toml  lab03.toml  lab04.toml  lab05.toml  lab07.toml  lab08.toml  lab09.toml
data/java/: ddp2-lab02.toml  ddp2-lab03.toml  lab00-nilai.toml  lab00-pangkat.toml  lab01.toml  lab02.toml  lab03.toml  lab04.toml  lab05.toml  lab07.toml  tp02.toml
data/py/: lab01.toml  lab02.toml  lab03.toml  lab04.toml  lab05.toml  lab07.toml  lab08.toml  lab09.toml
data/py-22/: lab01.toml  lab02.toml  lab03.toml  lab04.toml
data/sda-e/: tp04.toml
ddp_validator/: cli.py  constants.py  online.py  tester.py  types.py  utils.py
tests/: test_ddpvalidator.py
